# idempotent-secrets

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  justfile  release-please-config.json
.github/: dependabot.yml
.github/workflows/: chart.yml  container.yaml  container.yml  integration.yml  integration_test_reusable.yaml  main.yml  release-please.yaml  required_failsafe.yaml  required_reusable.yaml  rust.yml
helm/create-secret/: Chart.yaml  values.yaml
helm/create-secret/templates/: _helpers.tpl  job.yaml  permissions.yaml
helm/idempotent-secrets/: Chart.yaml  values.yaml
helm/idempotent-secrets/templates/: _helpers.tpl  anchor-secret.yaml  job.yaml  permissions.yaml
k8s-test-utils/: Cargo.toml
k8s-test-utils/src/: lib.rs
src/: k8s.rs  keypair.rs  main.rs  random_string.rs
tests/: basic_test.rs  cli.rs  helm.rs  helpers.rs
