[package]
name = "create-secret"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.99.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rsa = "0.9.8"
stdext = "0.3.3"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "test-util", "tokio-macros"] }

[profile.dev.package.num-bigint-dig]
opt-level = 3
