[package]
name = "create-secret"
# We track the version exclusively via the Helm chart
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = "1.1.0"
rand = "0.8.5"
rsa = "0.9.8"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["test-util", "tokio-macros"] }
lazy_static = "1.4.0"
stdext = "0.3.3"

[profile.dev.package.num-bigint-dig]
opt-level = 3
