[package]
name = "idempotent-secrets"
# We track the version exclusively via the Helm chart
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = "1.1.0"
rand = "0.8.5"
rsa = "0.9.8"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
lazy_static = "1.4.0"
stdext = "0.3.3"
tokio = { version = "1.47.1", features = ["test-util", "tokio-macros"] }

[profile.dev.package.num-bigint-dig]
opt-level = 3
